--- a/kindergarten-nutrition-backend/.env.example
+++ b/kindergarten-nutrition-backend/.env.example
@@ -3,13 +3,13 @@ NODE_ENV=development
 PORT=3001
 FRONTEND_URL=http://localhost:3000
 
-# Database Configuration
+# MySQL Database Configuration
 DB_HOST=localhost
-DB_PORT=5432
+DB_PORT=3306
 DB_NAME=kindergarten_nutrition
-DB_USER=your_username
+DB_USER=root
 DB_PASSWORD=your_password
-DB_URL=postgresql://username:password@localhost:5432/kindergarten_nutrition
+DB_URL=mysql://root:password@localhost:3306/kindergarten_nutrition
 
 # JWT Configuration
 JWT_SECRET=your_super_secret_jwt_key_here
