--- a/kindergarten-nutrition-backend/package.json
+++ b/kindergarten-nutrition-backend/package.json
@@ -1,32 +1,39 @@
 {
   "name": "kindergarten-nutrition-backend",
   "version": "1.0.0",
-  "description": "Backend API for Kindergarten Nutrition Management System",
+  "description": "Backend API for Kindergarten Nutrition Management System - Pure Node.js with MySQL",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "jest"
+    "dev": "node server.js",
+    "test": "node test-database.js",
+    "cleanup": "powershell -ExecutionPolicy Bypass -File cleanup-project.ps1"
   },
   "keywords": [
     "kindergarten",
     "nutrition",
     "management",
-    "express",
-    "nodejs"
+    "nodejs",
+    "mysql"
   ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
+    "@react-pdf/renderer": "^4.3.0",
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
+    "docx": "^9.5.1",
     "dotenv": "^16.3.1",
-    "helmet": "^7.0.0",
-    "morgan": "^1.10.0"
+    "exceljs": "^4.4.0",
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.14.3",
+    "pdfkit": "^0.17.2",
+    "puppeteer": "^24.18.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
-    "jest": "^29.6.2"
+    "jest": "^29.6.2",
+    "nodemon": "^3.1.10"
   },
   "directories": {
     "test": "tests"
