--- a/kindergarten-nutrition-backend/package.json
+++ b/kindergarten-nutrition-backend/package.json
@@ -22,9 +22,11 @@
     "@react-pdf/renderer": "^4.3.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
     "docx": "^9.5.1",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.6.1",
     "exceljs": "^4.4.0",
+    "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.3",
     "pdfkit": "^0.17.2",
